--- a/L1-Loopy-C-Turtles.vcxproj
+++ b/L1-Loopy-C-Turtles.vcxproj
@@ -143,7 +143,7 @@
     <ClInclude Include="CTurtle.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main-CTurtle.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
