--- a/L1-Loopy-C-Turtles.vcxproj.filters
+++ b/L1-Loopy-C-Turtles.vcxproj.filters
@@ -23,7 +23,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main-CTurtle.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
