--- a/L1-Loopy-C-Turtles.vcxproj
+++ b/L1-Loopy-C-Turtles.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClInclude Include="CImg.h" />
     <ClInclude Include="CTurtle.hpp" />
+    <ClInclude Include="include\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
