--- a/L1-Loopy-C-Turtles.vcxproj.filters
+++ b/L1-Loopy-C-Turtles.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="CTurtle.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\stb_image.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
