Add sound OH YAAAYYAYA

--- a/L1-Loopy-C-Turtles.vcxproj.filters
+++ b/L1-Loopy-C-Turtles.vcxproj.filters
@@ -32,5 +32,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
+    <None Include="init.cmd" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="LICENSE.txt" />
   </ItemGroup>
 </Project>
