Remove audo.wav

--- a/L1-Loopy-C-Turtles.vcxproj
+++ b/L1-Loopy-C-Turtles.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include=".gitignore" />
     <None Include="init.cmd" />
     <None Include="README.md" />
   </ItemGroup>
