--- a/L1-Loopy-C-Turtles.vcxproj.filters
+++ b/L1-Loopy-C-Turtles.vcxproj.filters
@@ -33,6 +33,7 @@
   <ItemGroup>
     <None Include="README.md" />
     <None Include="init.cmd" />
+    <None Include=".gitignore" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="LICENSE.txt" />
