Imrove frame resolution & set frame preloading to constant

--- a/L1-Loopy-C-Turtles.vcxproj
+++ b/L1-Loopy-C-Turtles.vcxproj
@@ -157,6 +157,5 @@
     <Text Include="LICENSE.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
-  <ImportGroup Label="ExtensionTargets">
-  </ImportGroup>
+  <ImportGroup Label="ExtensionTargets" />
 </Project>
