Fixed dependency whateverness

--- a/L1-Loopy-C-Turtles.vcxproj.filters
+++ b/L1-Loopy-C-Turtles.vcxproj.filters
@@ -15,13 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CImg.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="CTurtle.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="include\stb_image.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\CImg.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\CTurtle.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
