--- a/L1-Loopy-C-Turtles.vcxproj
+++ b/L1-Loopy-C-Turtles.vcxproj
@@ -141,8 +141,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="CImg.h" />
-    <ClInclude Include="CTurtle.hpp" />
+    <ClInclude Include="include\CImg.h" />
+    <ClInclude Include="include\CTurtle.hpp" />
     <ClInclude Include="include\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
